--- a/src/main/res/layout/memo_index.xml
+++ b/src/main/res/layout/memo_index.xml
@@ -1,9 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     tools:context=".MainActivity" >
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="20dp"
+        android:inputType="text"/>
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/editText1"
+        android:textSize="20dp"
+        android:inputType="numberDecimal"/>
 
     <TextView
         android:id="@+id/textView1"
@@ -12,17 +30,8 @@
         android:layout_margin="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:textSize="20dp"
-        android:text="test"/>
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/textView1"
-        android:textSize="20dp"/>
+        android:layout_below="@+id/editText2"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/sifuto"
