フラグメント書き換え
一部プログラムをフラグメントを使用したプログラムに書き換え。不要なクラスの削除。

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/grayColor"
-    tools:context="com.example.kakeibo.MainActivity">
+    android:background="@color/grayColor">
 
     <RelativeLayout
         android:layout_width="match_parent"
