--- a/src/main/res/layout/memo_page.xml
+++ b/src/main/res/layout/memo_page.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/memo_page_tx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hoge"/>
 
     <Button
         android:id="@+id/memo_back"
@@ -13,4 +18,4 @@
         android:layout_alignParentBottom="true"
         android:text="戻る"/>
 
-</RelativeLayout>
+</LinearLayout>
