--- a/src/main/res/layout/memo_page.xml
+++ b/src/main/res/layout/memo_page.xml
@@ -14,8 +14,7 @@
         android:id="@+id/memo_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
         android:text="戻る"/>
 
 </LinearLayout>
