--- a/src/main/res/layout/memo_index.xml
+++ b/src/main/res/layout/memo_index.xml
@@ -20,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_toLeftOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
         android:text="シフト" />
 
@@ -29,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/sifuto"
         android:layout_alignParentBottom="true"
         android:text="収支" />
 
@@ -41,5 +40,14 @@
         android:layout_toRightOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
         android:text="メモ" />
+
+    <Button
+        android:id="@+id/show_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/memo"
+        android:layout_alignParentBottom="true"
+        android:text="SHOW"/>
 
 </RelativeLayout>
