--- a/main/res/layout/memo_index.xml
+++ b/main/res/layout/memo_index.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/frame_style"
         android:layout_alignParentBottom="true"
         android:text="シフト" />
 
@@ -28,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/frame_style"
         android:layout_toRightOf="@+id/sifuto"
         android:layout_alignParentBottom="true"
         android:text="収支" />
@@ -37,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/frame_style"
         android:layout_toRightOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
         android:text="メモ" />
@@ -46,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/frame_style"
         android:layout_toRightOf="@+id/memo"
         android:layout_alignParentBottom="true"
         android:text="SHOW"/>
