--- a/main/res/layout/syuusi_page.xml
+++ b/main/res/layout/syuusi_page.xml
@@ -18,21 +18,45 @@
 
         <EditText
             android:id="@+id/editText1"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:inputType="text"/>
+            android:layout_margin="10dp"
+            android:background="@drawable/frame_style"
+            android:inputType="text"
+            android:hint=" category"/>
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"/>
+            android:layout_margin="10dp"
+            android:background="@drawable/frame_style"
+            android:inputType="numberDecimal"
+            android:hint=" price"/>
 
-        <Button
-            android:id="@+id/syuusi_input"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Input"/>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/syuusi_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/frame_style"
+                android:text="Input"/>
+
+            <Button
+                android:id="@+id/syuusi_show"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/frame_style"
+                android:layout_toRightOf="@+id/syuusi_input"
+                android:text="SHOW" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textSyuusi"
@@ -40,12 +64,20 @@
             android:layout_height="wrap_content"
             android:textSize="30dp"/>
 
-        <Button
-            android:id="@+id/syuusi_back"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="250dp"
-            android:text="戻る"/>
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/syuusi_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/frame_style"
+                android:layout_alignParentBottom="true"
+                android:text="戻る"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
