--- a/main/res/layout/syuusi_page.xml
+++ b/main/res/layout/syuusi_page.xml
@@ -10,11 +10,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/syuusi_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="収支ページ"/>
+            android:layout_height="wrap_content" />-->
 
         <EditText
             android:id="@+id/editText1"
@@ -33,6 +32,11 @@
             android:background="@drawable/frame_style"
             android:inputType="numberDecimal"
             android:hint=" price"/>
+
+        <TextView
+            android:id="@+id/syuusi_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
