--- a/main/res/layout/memo_index.xml
+++ b/main/res/layout/memo_index.xml
@@ -5,15 +5,22 @@
     android:layout_height="match_parent"
     android:id="@+id/memo_index_re">
 
+    <TextView
+        android:id="@+id/memo_index_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:textSize="20dp"/>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/memo_index_te"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:textSize="20dp" />
+        android:layout_below="@+id/memo_index_day"
+        android:textSize="20dp"/>
 
     <Button
         android:id="@+id/sifuto"
