--- a/main/res/layout/syuusi_page.xml
+++ b/main/res/layout/syuusi_page.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/syuusi_pg"
@@ -10,10 +10,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--<TextView
-            android:id="@+id/syuusi_text"
+        <Switch
+            android:id="@+id/syuusi_switch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />-->
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:showText="true"
+            android:text="収入・支出"
+            android:textOff="収入"
+            android:textOn="支出"
+            tools:text="収入・支出  " />
 
         <EditText
             android:id="@+id/editText1"
@@ -32,11 +38,6 @@
             android:background="@drawable/frame_style"
             android:inputType="numberDecimal"
             android:hint=" price"/>
-
-        <TextView
-            android:id="@+id/syuusi_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -62,11 +63,17 @@
 
         </RelativeLayout>
 
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/textSyuusi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30dp"/>
+
+        </ScrollView>
 
         <RelativeLayout
             android:layout_width="wrap_content"
