--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -130,6 +130,7 @@
         android:layout_marginLeft="1dp"
         android:numColumns="7"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp"></GridView>
-
+        android:verticalSpacing="1dp">
+    </GridView>
+    
 </LinearLayout>
