--- a/src/main/main/res/layout/memo_index.xml
+++ b/src/main/main/res/layout/memo_index.xml
@@ -3,25 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/memo_index_re">
 
-    tools:context=".activities.BaseActivity" >
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textSize="20dp"
-        android:inputType="text"/>
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/editText1"
-        android:textSize="20dp"
-        android:inputType="numberDecimal"/>
 
     <TextView
         android:id="@+id/textView1"
@@ -30,7 +13,6 @@
         android:layout_margin="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/editText2"
         android:textSize="20dp" />
 
     <Button
@@ -38,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_toLeftOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
         android:text="シフト" />
 
@@ -47,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/sifuto"
         android:layout_alignParentBottom="true"
         android:text="収支" />
 
@@ -59,5 +40,14 @@
         android:layout_toRightOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
         android:text="メモ" />
+
+    <Button
+        android:id="@+id/show_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/memo"
+        android:layout_alignParentBottom="true"
+        android:text="SHOW"/>
 
 </RelativeLayout>
