--- a/src/main/res/layout/alldata.xml
+++ b/src/main/res/layout/alldata.xml
@@ -2,19 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/alldata_pg"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/memo_page_tx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hoge"/>
+        android:text="All Data SHOW"/>
 
-    <Button
-        android:id="@+id/memo_back"
+    <TextView
+        android:id="@+id/alldata_text_spending"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="戻る"/>
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/alldata_text_income"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
