--- a/src/main/res/layout/base_activity.xml
+++ b/src/main/res/layout/base_activity.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.KakeiboListActivity">
+    tools:context=".activities.BaseActivity">
 
     <LinearLayout
-        android:id="@+id/show_kakeibo_pg"
+        android:id="@+id/base_activity_xml"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:orientation="vertical" />
 
 </android.support.constraint.ConstraintLayout>
