当月毎のデータ出力
日付データをsubStringで分割。DataBaseManagerに支出・収入の合計金額を出力させるSELECT文の追加。削除ボタンの追加(途中)。

--- a/main/res/layout/spending_page.xml
+++ b/main/res/layout/spending_page.xml
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/syuusi_back"
+                android:id="@+id/spending_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
