--- a/main/res/layout/memo_index.xml
+++ b/main/res/layout/memo_index.xml
@@ -55,6 +55,7 @@
                 android:id="@+id/memo_index_te3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:textSize="20dp"/>
 
         </LinearLayout>
@@ -73,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="5dp"
+            android:background="@drawable/frame_style"
             android:text="収支" />
 
         <Button
@@ -81,7 +83,32 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="5dp"
+            android:background="@drawable/frame_style"
             android:text="メモ" />
 
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/frame_style"
+            android:text="全削除"/>
+
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/index_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/frame_style"
+            android:layout_alignParentBottom="true"
+            android:text="戻る"/>
+
+    </RelativeLayout>
 </LinearLayout>
