--- a/main/res/layout/memo_page.xml
+++ b/main/res/layout/memo_page.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/syuusi_back"
+            android:id="@+id/memo_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
