--- a/main/res/layout/memo_index.xml
+++ b/main/res/layout/memo_index.xml
@@ -1,114 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:id="@+id/memo_index_re">
+
 
     <TextView
-        android:id="@+id/memo_index_day"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:layout_margin="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:textSize="20dp" />
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/index_spending_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="支出"/>
-
-            <TextView
-                android:id="@+id/memo_index_te"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/index_income_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="収入"/>
-
-            <TextView
-                android:id="@+id/memo_index_te2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textSize="20dp"/>
-
-            <TextView
-                android:id="@+id/index_memo_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="メモ"/>
-
-            <TextView
-                android:id="@+id/memo_index_te3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textSize="20dp"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/syuusi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="@drawable/frame_style"
-            android:text="収支" />
-
-        <Button
-            android:id="@+id/memo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="@drawable/frame_style"
-            android:text="メモ" />
-
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:background="@drawable/frame_style"
-            android:text="全削除"/>
-
-    </LinearLayout>
-
-    <RelativeLayout
+    <Button
+        android:id="@+id/sifuto"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_alignParentBottom="true"
+        android:text="シフト" />
 
-        <Button
-            android:id="@+id/index_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/frame_style"
-            android:layout_alignParentBottom="true"
-            android:text="戻る"/>
+    <Button
+        android:id="@+id/syuusi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/sifuto"
+        android:layout_alignParentBottom="true"
+        android:text="収支" />
 
-    </RelativeLayout>
-</LinearLayout>
+    <Button
+        android:id="@+id/memo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/syuusi"
+        android:layout_alignParentBottom="true"
+        android:text="メモ" />
+
+    <Button
+        android:id="@+id/show_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/memo"
+        android:layout_alignParentBottom="true"
+        android:text="SHOW"/>
+
+</RelativeLayout>
