--- a/main/res/layout/memo_page.xml
+++ b/main/res/layout/memo_page.xml
@@ -4,64 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/memo_Edittext"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/frame_style"
-        android:inputType="text"
-        android:hint=" MEMO"/>
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/memo_page_tx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="hoge"/>
 
-        <Button
-            android:id="@+id/memo_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/frame_style"
-            android:text="MEMO"/>
-
-        <Button
-            android:id="@+id/memo_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/frame_style"
-            android:layout_toRightOf="@+id/memo_input"
-            android:text="SHOW" />
-
-    </RelativeLayout>
-
-    <ScrollView
+    <Button
+        android:id="@+id/memo_back"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textMemo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"/>
-
-    </ScrollView>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/memo_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/frame_style"
-            android:layout_alignParentBottom="true"
-            android:text="戻る"/>
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="戻る"/>
 
 </LinearLayout>
