--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/grayColor"
-    android:id="@+id/main">
+    android:background="@color/grayColor">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -131,7 +130,6 @@
         android:layout_marginLeft="1dp"
         android:numColumns="7"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp">
-    </GridView>
-    
+        android:verticalSpacing="1dp"></GridView>
+
 </LinearLayout>
