--- a/main/res/layout/syuusi_page.xml
+++ b/main/res/layout/syuusi_page.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/syuusi_pg"
@@ -10,62 +10,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Switch
-            android:id="@+id/syuusi_switch"
+        <TextView
+            android:id="@+id/syuusi_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:showText="true"
-            android:text="収入・支出"
-            android:textOff="収入"
-            android:textOn="支出"
-            tools:text="収入・支出  " />
+            android:text="収支ページ"/>
 
         <EditText
             android:id="@+id/editText1"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/frame_style"
-            android:inputType="text"
-            android:hint=" category"/>
+            android:inputType="text"/>
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/frame_style"
-            android:inputType="numberDecimal"
-            android:hint=" price"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <RelativeLayout
+        <Button
+            android:id="@+id/syuusi_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/syuusi_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/frame_style"
-                android:text="Input"/>
-
-            <Button
-                android:id="@+id/syuusi_show"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/frame_style"
-                android:layout_toRightOf="@+id/syuusi_input"
-                android:text="SHOW" />
-
-        </RelativeLayout>
-
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:text="Input"/>
 
         <TextView
             android:id="@+id/textSyuusi"
@@ -73,22 +39,12 @@
             android:layout_height="wrap_content"
             android:textSize="30dp"/>
 
-        </ScrollView>
-
-        <RelativeLayout
+        <Button
+            android:id="@+id/syuusi_back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/syuusi_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/frame_style"
-                android:layout_alignParentBottom="true"
-                android:text="戻る"/>
-
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="250dp"
+            android:text="戻る"/>
 
     </LinearLayout>
 
