--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/grayColor">
+    android:background="@color/grayColor"
+    android:id="@+id/main">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -130,6 +131,7 @@
         android:layout_marginLeft="1dp"
         android:numColumns="7"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp"></GridView>
-
+        android:verticalSpacing="1dp">
+    </GridView>
+    
 </LinearLayout>
