--- a/main/res/layout/cell.xml
+++ b/main/res/layout/cell.xml
@@ -9,5 +9,12 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"/>
 
+    <ImageView
+        android:id="@+id/image_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+
 </RelativeLayout>
 
