--- a/main/res/layout/income_page.xml
+++ b/main/res/layout/income_page.xml
@@ -82,6 +82,15 @@
                 android:layout_alignParentBottom="true"
                 android:text="戻る"/>
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/camera_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/camera"
+                android:layout_margin="16dp" />
+
         </RelativeLayout>
 
     </LinearLayout>
